--- a/adminapi/src/main/resources/application.properties
+++ b/adminapi/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=adminapi
+spring.datasource.url=jdbc:postgresql://localhost:5432/ww_admin
+spring.datasource.username=admin
+spring.datasource.password=adminpass
