--- a/adminapi/src/main/resources/application.properties
+++ b/adminapi/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=adminapi
 spring.datasource.url=jdbc:postgresql://localhost:5432/ww_admin
 spring.datasource.username=admin
 spring.datasource.password=adminpass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
