--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ adminapi/!.mvn/wrapper/maven-wrapper.jar
 adminapi/!**/src/main/**/target/
 adminapi/!**/src/test/**/target/
 /.venv/
-*/__pycache__/
+__pycache__/
+backend2/*/__pycache__/
 ### STS ###
 adminapi/.apt_generated
 adminapi/.classpath
